# rust-axum-practice

./: Cargo.toml
src/: error.rs  log.rs  main.rs  model.rs
src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_ticket.rs
tests/: test_web.rs
