[package]
name = "example-axum"
authors = ["Sherpa <pjkfckr@gmail.com>"]
license = "MIT"
description = "An example of using httpc-test with axum"
repository = "https://github.com/pjkfckr/rust-axum-practice"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
# Serde / json
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.96"
serde_with = "2.3.3"
# Axum
axum = { version = "0.6.17", features = ["macros"]}
tower-http = { version = "0.4.0", features = ["fs"] }
tower-cookies = "0.9.0"
# Others
lazy-regex = "2.5.0"
async-trait = "0.1.68"
strum_macros = "0.24.3"
uuid = { version = "1.3.2", features = ["v4", "fast-rng"]}

[dev-dependencies]
anyhow = "1.0.70"
httpc-test = "0.1.1"